I've renamed all user-facing "Vibe Kanban" text to "MultiVibe" with the italic subheader "a Vibe Kanban fork". Here's a summary of the changes made:
**Files Modified (16 total):**

1. **`frontend/index.html`** - Changed `<title>` from `vibe-kanban` to `MultiVibe`

2. **`frontend/public/site.webmanifest`** - Changed app name from `Vibe Kanban` to `MultiVibe` and short name from `VK` to `MV`

3. **`frontend/src/contexts/ProjectContext.tsx`** - Updated document title to use `MultiVibe` instead of `vibe-kanban`

4. **`frontend/src/pages/Login.tsx`** - Added the italic "a Vibe Kanban fork" tagline below the main tagline on both login screens

5. **Dialog Components:**
   - `OnboardingDialog.tsx` - "Welcome to MultiVibe"
   - `DisclaimerDialog.tsx` - "MultiVibe runs AI coding agents..."
   - `ReleaseNotesDialog.tsx` - "We've updated MultiVibe!"

6. **i18n Locale Files (All Languages):**
   - `en/common.json` - Updated appName to "MultiVibe", added appTagline "a Vibe Kanban fork", updated all UI messages
   - `en/tasks.json` - Updated "Vibe Kanban Companion" references to "MultiVibe Companion"
   - `en/settings.json` - Updated all references to MultiVibe
   - `es/common.json`, `fr/common.json`, `ja/common.json`, `ko/common.json`, `zh-Hans/common.json`, `zh-Hant/common.json` - Same branding updates for all supported languages

**Key User-Visible Changes:**
- Login page now shows "**MultiVibe**" with *"a Vibe Kanban fork"* in italics below
- Browser tab/title shows "MultiVibe"
- PWA manifest uses "MultiVibe" as the app name
- Onboarding dialog says "Welcome to MultiVibe"
- Safety disclaimer mentions "MultiVibe"
- All companion/feature references updated across all locales

--- a/frontend/src/i18n/locales/en/settings.json
+++ b/frontend/src/i18n/locales/en/settings.json
@@ -80,7 +80,7 @@
           "host": {
             "label": "Remote SSH Host (Optional)",
             "placeholder": "e.g., hostname or IP address",
-            "helper": "Set this if Vibe Kanban is running on a remote server. When set, clicking \"Open in Editor\" will generate a URL to open your editor via SSH instead of spawning a local command."
+            "helper": "Set this if MultiVibe is running on a remote server. When set, clicking \"Open in Editor\" will generate a URL to open your editor via SSH instead of spawning a local command."
           },
           "user": {
             "label": "Remote SSH User (Optional)",
@@ -194,7 +194,7 @@
       },
       "privacy": {
         "title": "Privacy",
-        "description": "Help improve Vibe-Kanban by sharing anonymous usage data.",
+        "description": "Help improve MultiVibe by sharing anonymous usage data.",
         "telemetry": {
           "label": "Enable Telemetry",
           "helper": "Enables anonymous usage events tracking to help improve the application. No prompts or project information are collected."
@@ -463,7 +463,7 @@
       "description": "Contribute your Claude Code Max subscription to the shared token pool for fair usage rotation.",
       "dialog": {
         "title": "Claude Code Token Required",
-        "description": "To run coding tasks, you need to configure your Claude Code OAuth token. This allows Vibe Kanban to use your Claude Code subscription."
+        "description": "To run coding tasks, you need to configure your Claude Code OAuth token. This allows MultiVibe to use your Claude Code subscription."
       },
       "yourToken": {
         "title": "Your Token",
@@ -491,7 +491,7 @@
         "step2Run": "Run:",
         "step3": "Follow the prompts to authenticate with your Claude Max account",
         "step4": "Copy the generated token and paste it above",
-        "note": "This token allows Vibe Kanban to use your Claude Code subscription. Tokens are rotated fairly among all contributors."
+        "note": "This token allows MultiVibe to use your Claude Code subscription. Tokens are rotated fairly among all contributors."
       },
       "teamPool": {
         "title": "Team Token Pool",
