--- a/frontend/src/i18n/locales/fr/common.json
+++ b/frontend/src/i18n/locales/fr/common.json
@@ -104,7 +104,7 @@
     "banner": "Mode développement - Ceci est une version de développement"
   },
   "oauth": {
-    "title": "Se connecter à Vibe Kanban",
+    "title": "Se connecter à MultiVibe",
     "description": "Connectez-vous pour rejoindre des organisations et partager des tâches avec votre équipe",
     "continueWithGitHub": "Continuer avec GitHub",
     "continueWithGoogle": "Continuer avec Google",
@@ -120,7 +120,8 @@
     "tryAgain": "Réessayer"
   },
   "localAuth": {
-    "appName": "Vibe Kanban",
+    "appName": "MultiVibe",
+    "appTagline": "a Vibe Kanban fork",
     "tagline": "Gestion collaborative des tâches pour agents",
     "signInToContinue": "Connectez-vous pour continuer",
     "continueWithGitHub": "Continuer avec GitHub",
@@ -270,7 +271,7 @@
   },
   "betaWorkspaces": {
     "title": "Essayer la nouvelle interface",
-    "intro": "Nous avons reconstruit l'interface de Vibe Kanban de A à Z, et vous êtes invité à l'essayer.",
+    "intro": "Nous avons reconstruit l'interface de MultiVibe de A à Z, et vous êtes invité à l'essayer.",
     "newUiDescription": "La nouvelle interface est optimisée pour le travail quotidien : jongler avec les agents, prévisualiser les modifications et réviser le code. Elle débloque également des fonctionnalités non disponibles dans l'ancienne interface :",
     "newFeatures": {
       "multiRepo": "Modifier plusieurs dépôts en même temps",
@@ -291,7 +292,7 @@
   "workspacesGuide": {
     "welcome": {
       "title": "Bienvenue",
-      "content": "Bienvenue dans les Espaces de travail, une interface repensée pour Vibe Kanban. Nous la déployons auprès d'utilisateurs sélectionnés pour recueillir leurs premiers retours. Partagez vos impressions à tout moment en utilisant l'icône de feedback dans la barre de navigation."
+      "content": "Bienvenue dans les Espaces de travail, une interface repensée pour MultiVibe. Nous la déployons auprès d'utilisateurs sélectionnés pour recueillir leurs premiers retours. Partagez vos impressions à tout moment en utilisant l'icône de feedback dans la barre de navigation."
     },
     "commandBar": {
       "title": "Barre de commandes",
