Here's a summary of all the changes made across 6 files:
### Bug 1: Modal won't close after submit (or via X button)

**File:** `frontend/src/components/dialogs/tasks/HoldTaskDialog.tsx`

The `HoldTaskDialog` was calling `modal.resolve()` without `modal.hide()` in both `handleConfirm` and `handleCancel`. Other dialogs in the codebase (e.g., `DeleteTaskConfirmationDialog`) correctly call both. Added `modal.hide()` after `modal.resolve()` in both handlers.

### Bug 2: Hold reason not added to chat message history as context

**File:** `frontend/src/components/ui-new/containers/SessionChatBoxContainer.tsx`

Added a `lastHoldCommentRef` that captures the hold comment when a hold is placed. When the next message is sent (after the hold is released), the hold reason is prepended to the prompt as `[Context: This task was temporarily placed on hold. Reason: ...]`. The ref is cleared after the message is successfully sent.

### Bug 3: Send button still works while task is on hold

**Files:** Multiple, threading `isOnHold` from task data down to the chat box:

1. **`WorkspacesMainContainer.tsx`** - Passes `isOnHold` and `holdComment` from the fetched task data to `WorkspacesMain`
2. **`WorkspacesMain.tsx`** - Accepts and passes these props to `SessionChatBoxContainer`
3. **`SessionChatBoxContainer.tsx`** - Accepts `isOnHold`/`holdComment` via `SharedProps`, passes `isOnHold` to `SessionChatBox`
4. **`SessionChatBox.tsx`** - Added `isOnHold` to the `canSend` and `isDisabled` logic, disabling both the send button and the editor when the task is on hold. Also added a warning banner ("Task is on hold - sending is disabled. Release the hold to continue.")
5. **`frontend/src/i18n/locales/en/tasks.json`** - Added `conversation.hold.banner` translation string

--- a/frontend/src/i18n/locales/en/tasks.json
+++ b/frontend/src/i18n/locales/en/tasks.json
@@ -298,6 +298,9 @@
       "count_one": "{{count}} unresolved conversation - resolve before sending",
       "count_other": "{{count}} unresolved conversations - resolve before sending"
     },
+    "hold": {
+      "banner": "Task is on hold - sending is disabled. Release the hold to continue."
+    },
     "thread": {
       "deleteMessage": "Delete message",
       "resolved": "Resolved",
